--- a/src/assets/SCSS/themes/_main_themes.scss
+++ b/src/assets/SCSS/themes/_main_themes.scss
@@ -12,13 +12,14 @@ html {
 body {
   font-family: $fontFamily;
   font-weight: 400;
-  color: $txt;
-  background: $bg;
+  color: $text;
+  background: $background;
   padding: 0;
   margin: 0;
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background 0.2s;
 }
 
 ::-webkit-scrollbar {
