--- a/src/assets/layouts/layout-dark.css
+++ b/src/assets/layouts/layout-dark.css
@@ -1,3 +1,165 @@
+.icon-xs {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 12px;
+}
 
+.icon-sm {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 14px;
+}
+
+.icon-md {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 16px;
+}
+
+.icon-lg {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 20px;
+}
+
+.icon-lgr {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 24px;
+}
+
+.icon-big {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 36px;
+}
+
+button[type=button].primary-button {
+  background: #9f7660 !important;
+  color: #ecdfe1 !important;
+  font-size: 16px;
+  transition: background 0.2s, color 0.2s, box-shadow 0.2s, opacity 0.2s;
+  border: none;
+}
+
+button[type=button].primary-button:hover {
+  background: #9f7660 !important;
+  color: #ecdfe1 !important;
+  border: none;
+}
+
+button[type=button].primary-button:focus {
+  box-shadow: 0 0 0 0.2rem #9c945d !important;
+}
+
+button[type=button].primary-button:focus-visible {
+  box-shadow: 0 0 0 0.2rem #9c945d !important;
+}
+
+button[type=button].secondary-button {
+  background: #1d1b11 !important;
+  color: #ecdfe1 !important;
+  font-size: 16px;
+  transition: background 0.2s, color 0.2s, box-shadow 0.2s, opacity 0.2s;
+  border: 1px solid #9c945d;
+}
+
+button[type=button].secondary-button:hover {
+  background: #1d1b11 !important;
+  color: #ecdfe1 !important;
+  border: 1px solid #9c945d;
+}
+
+button[type=button].secondary-button:focus {
+  box-shadow: 0 0 0 0.2rem #9f7660 !important;
+}
+
+button[type=button].secondary-button:focus-visible {
+  box-shadow: 0 0 0 0.2rem #9f7660 !important;
+}
+
+@media (max-width: 900px) {
+  button[type=button].primary-button,
+  button[type=button].secondary-button {
+    font-size: 14px !important;
+  }
+}
+input[type=text] {
+  color: #ecdfe1;
+  background: #1d1b11;
+  font-size: 16px;
+  transition: background 0.2s, color 0.2s, box-shadow 0.2s, border 0.2s;
+  border: 1px solid #9c945d;
+}
+
+input[type=text]:hover {
+  border: 1px solid #9c945d !important;
+}
+
+input[type=text]:active,
+input[type=text]:focus,
+input[type=text]:focus-visible {
+  box-shadow: 0 0 0 0.2rem #9c945d !important;
+  border: none !important;
+}
+
+.error-message {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+@media (max-width: 900px) {
+  input[type=text],
+  .error-message {
+    font-size: 14px !important;
+  }
+}
+.header-wrapper .image-caption {
+  font-size: 16px;
+  color: #ecdfe1;
+}
+
+@media (max-width: 900px) {
+  .header-wrapper .image-caption {
+    font-size: 14px !important;
+  }
+}
+.main-content-wrapper .home-page-header {
+  line-height: 2;
+  transition: color 0.2s;
+  font-size: 24px;
+  color: #ecdfe1;
+}
+.main-content-wrapper .mp3-file-wrapper .file-title {
+  font-size: 16px;
+  color: #ecdfe1;
+}
+
+.loading-wrapper .loading-text {
+  color: #ecdfe1;
+  font-size: 14px;
+  transition: color 0.2s;
+}
+
+@media (max-width: 900px) {
+  .main-content-wrapper .home-page-header {
+    font-size: 20px !important;
+  }
+  .mp3-file-wrapper .file-title {
+    font-size: 14px !important;
+  }
+}
+.layout-container {
+  width: 100%;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+fieldset {
+  border: none;
+}
 
 /*# sourceMappingURL=layout-dark.css.map */
