--- a/src/assets/themes/theme-dark.css
+++ b/src/assets/themes/theme-dark.css
@@ -1,3 +1,39 @@
+.icon-xs {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 12px;
+}
+
+.icon-sm {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 14px;
+}
+
+.icon-md {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 16px;
+}
+
+.icon-lg {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 20px;
+}
+
+.icon-lgr {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 24px;
+}
+
+.icon-big {
+  color: #ecdfe1;
+  transition: color 0.2s;
+  font-size: 36px;
+}
+
 @font-face {
   font-family: "Roboto";
   font-style: normal;
@@ -34,13 +70,14 @@ html {
 body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 400;
-  color: #edeaf1;
-  background: #141118;
+  color: #ecdfe1;
+  background: #201315;
   padding: 0;
   margin: 0;
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background 0.2s;
 }
 
 ::-webkit-scrollbar {
@@ -49,19 +86,19 @@ body {
 }
 
 :root {
-  --primary: #141118;
-  --secondary: #141118;
-  --text: #edeaf1;
-  --bg: #141118;
-  --accent: #b3cccb;
+  --primary: #9f7660;
+  --secondary: #1d1b11;
+  --text: #ecdfe1;
+  --background: #201315;
+  --accent: #9c945d;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #141118;
+  background: #201315;
 }
 
 ::selection {
-  background: #b3cccb;
+  background: #9c945d;
 }
 
 /*# sourceMappingURL=theme-dark.css.map */
