--- a/src/assets/themes/theme-light.css
+++ b/src/assets/themes/theme-light.css
@@ -1,3 +1,39 @@
+.icon-xs {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 12px;
+}
+
+.icon-sm {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 14px;
+}
+
+.icon-md {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 16px;
+}
+
+.icon-lg {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 20px;
+}
+
+.icon-lgr {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 24px;
+}
+
+.icon-big {
+  color: #201315;
+  transition: color 0.2s;
+  font-size: 36px;
+}
+
 @font-face {
   font-family: "Roboto";
   font-style: normal;
@@ -34,13 +70,14 @@ html {
 body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 400;
-  color: #141118;
-  background: #edeaf1;
+  color: #201315;
+  background: #ecdfe1;
   padding: 0;
   margin: 0;
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background 0.2s;
 }
 
 ::-webkit-scrollbar {
@@ -49,19 +86,19 @@ body {
 }
 
 :root {
-  --primary: #7f5757;
-  --secondary: #dae0d1;
-  --text: #141118;
-  --bg: #edeaf1;
-  --accent: #5c8a88;
+  --primary: #9f7660;
+  --secondary: #eae8dc;
+  --text: #201315;
+  --background: #ecdfe1;
+  --accent: #3c3924;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #edeaf1;
+  background: #ecdfe1;
 }
 
 ::selection {
-  background: #5c8a88;
+  background: #3c3924;
 }
 
 /*# sourceMappingURL=theme-light.css.map */
