--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,2 @@
-.layout-container {
-  width: 100%;
-  height: 100dvh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
+@import 'primeflex/primeflex.css';
 
