--- a/src/assets/SCSS/variables/colors/_colors_dark.scss
+++ b/src/assets/SCSS/variables/colors/_colors_dark.scss
@@ -1,5 +1,5 @@
-$primary: #141118;
-$secondary: #141118;
-$txt: #edeaf1;
-$bg: #141118;
-$accent: #b3cccb;
+$text: #ecdfe1;
+$background: #201315;
+$primary: #9f7660;
+$secondary: #1d1b11;
+$accent: #9c945d;
