--- a/src/assets/SCSS/variables/colors/_colors_light.scss
+++ b/src/assets/SCSS/variables/colors/_colors_light.scss
@@ -1,5 +1,5 @@
-$primary: #7f5757;
-$secondary: #dae0d1;
-$txt: #141118;
-$bg: #edeaf1;
-$accent: #5c8a88;
+$text: #201315;
+$background: #ecdfe1;
+$primary: #9f7660;
+$secondary: #eae8dc;
+$accent: #3c3924;
