Beautified ReadMe File + Minor Fixes.

--- a/src/app/pages/home/containers/home.component.html
+++ b/src/app/pages/home/containers/home.component.html
@@ -68,6 +68,7 @@
         <h2 class="file-title text-center"
             [pTooltip]="convertedVideo?.title"
             tooltipPosition="top"
+            [showDelay]="2500"
         >
           {{ convertedVideo?.title }}
         </h2>
