--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="layout-container"
-         [attr.data-theme]="configService.colorScheme"
+         [attr.data-theme]="configService.Theme"
 >
   <header id="header" class="header">
     <app-header></app-header>
