--- a/src/styles/prime-ng/_button.scss
+++ b/src/styles/prime-ng/_button.scss
@@ -1,26 +1,26 @@
 //  Primary Button Start
 
 button[type="button"].primary-button {
-  background: $primary !important;
-  color: $text !important;
-  font-size: $Medium;
+  background: var(--primary) !important;
+  color: var(--text) !important;
+  font-size: 16px;
   transition: background 0.2s, color 0.2s, box-shadow 0.2s, opacity 0.2s;
   border: none;
   font-weight: 400;
 }
 
 button[type="button"].primary-button:hover {
-  background: $primary !important;
-  color: $text !important;
+  background: var(--primary) !important;
+  color: var(--text) !important;
   border: none;
 }
 
 button[type="button"].primary-button:focus {
-  box-shadow: 0 0 0 0.2rem $accent !important;
+  box-shadow: 0 0 0 0.2rem var(--accent) !important;
 }
 
 button[type="button"].primary-button:focus-visible {
-  box-shadow: 0 0 0 0.2rem $accent !important;
+  box-shadow: 0 0 0 0.2rem var(--accent) !important;
 }
 
 //  Primary Button End
@@ -29,26 +29,26 @@ button[type="button"].primary-button:focus-visible {
 //  Secondary Button Start
 
 button[type="button"].secondary-button {
-  background: $secondary !important;
-  color: $text !important;
-  font-size: $Medium;
+  background: var(--secondary) !important;
+  color: var(--text) !important;
+  font-size: 16px;
   transition: background 0.2s, color 0.2s, box-shadow 0.2s, opacity 0.2s;
-  border: 1px solid $accent;
+  border: 1px solid var(--accent);
   font-weight: 400;
 }
 
 button[type="button"].secondary-button:hover {
-  background: $secondary !important;
-  color: $text !important;
-  border: 1px solid $accent;
+  background: var(--secondary) !important;
+  color: var(--text) !important;
+  border: 1px solid var(--accent);
 }
 
 button[type="button"].secondary-button:focus {
-  box-shadow: 0 0 0 0.2rem $primary !important;
+  box-shadow: 0 0 0 0.2rem var(--primary) !important;
 }
 
 button[type="button"].secondary-button:focus-visible {
-  box-shadow: 0 0 0 0.2rem $primary !important;
+  box-shadow: 0 0 0 0.2rem var(--primary) !important;
 }
 
 //  Secondary Button End
@@ -57,6 +57,6 @@ button[type="button"].secondary-button:focus-visible {
 @media (max-width: 900px) {
   button[type="button"].primary-button,
   button[type="button"].secondary-button {
-    font-size: $Small !important;
+    font-size: 14px !important;
   }
 }
