--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <section class="header-wrapper w-full flex justify-content-between align-items-center py-2 px-8">
   <figure>
     <img class="logo-image" src="/favicon.ico" alt="Headphones Logo">
-    <figcaption class="image-caption">
+    <figcaption class="image-caption text-sm md:text-base">
       {{ 'LogoHeader' | translate }}
     </figcaption>
   </figure>
@@ -11,10 +11,10 @@
             pButton
             pRipple
             class="theme-switcher secondary-button flex justify-content-center align-items-center"
-            (click)="configService.changeColorScheme()"
+            (click)="configService.changeTheme()"
     >
       <i class="fa-solid icon-sm"
-         [class]="configService.colorScheme === 'light' ? 'fa-sun' : 'fa-moon'"
+         [class]="configService.Theme === 'light' ? 'fa-sun' : 'fa-moon'"
       >
       </i>
     </button>
