--- a/src/app/pages/home/containers/home.component.html
+++ b/src/app/pages/home/containers/home.component.html
@@ -1,6 +1,6 @@
 <section class="main-content-wrapper w-full h-full">
   <header>
-    <h1 class="home-page-header text-center">
+    <h1 class="home-page-header text-lg md:text-xl text-center">
       {{ 'HomePageHeader' | translate }}
     </h1>
   </header>
@@ -65,7 +65,7 @@
 
     <section class="mp3-file-wrapper w-full h-full flex gap-3 flex-column justify-content-center align-items-center">
       <ng-container *ngIf="convertedVideo; else LoadingBlock">
-        <h2 class="file-title text-center"
+        <h2 class="file-title text-sm md:text-md text-center"
             [pTooltip]="convertedVideo?.title"
             tooltipPosition="top"
             [showDelay]="2500"
@@ -85,7 +85,7 @@
       <ng-template #LoadingBlock>
         <ng-container *ngIf="pending">
           <section class="loading-wrapper flex gap-2 align-items-center mt-4">
-            <span class="loading-text">
+            <span class="loading-text text-sm">
               {{ 'Loading' | translate }}
             </span>
             <i class="loading-icon fa-solid fa-circle-notch pi-spin icon-lg"></i>
