--- a/src/styles/prime-ng/_input.scss
+++ b/src/styles/prime-ng/_input.scss
@@ -1,30 +1,30 @@
 input[type="text"] {
-  color: $text;
-  background: $secondary;
-  font-size: $Medium;
+  color: var(--text);
+  background: var(--secondary);
+  font-size: 16px;
   transition: background 0.2s, color 0.2s, box-shadow 0.2s, border 0.2s;
-  border: 1px solid $accent;
+  border: 1px solid var(--accent);
 }
 
 input[type="text"]:hover {
-  border: 1px solid $accent !important;
+  border: 1px solid var(--accent) !important;
 }
 
 input[type="text"]:active,
 input[type="text"]:focus,
 input[type="text"]:focus-visible {
-  box-shadow: 0 0 0 0.2rem $accent !important;
+  box-shadow: 0 0 0 0.2rem var(--accent) !important;
   border: none !important;
 }
 
 .error-message {
-  font-size: $Small;
+  font-size: 14px;
   font-weight: 400;
 }
 
 @media (max-width: 900px) {
   input[type="text"],
   .error-message {
-    font-size: $Small !important;
+    font-size: 14px !important;
   }
 }
