- Styling Improvements. - Removed Unused Files.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -10,7 +10,7 @@
     <button type="button"
             pButton
             pRipple
-            class="theme-switcher secondary-button flex justify-content-center align-items-center"
+            class="theme-switcher secondary-button flex justify-content-center align-items-center no-select"
             (click)="configService.changeTheme()"
     >
       <i class="fa-solid icon-sm"
