--- a/src/app/pages/home/containers/home.component.html
+++ b/src/app/pages/home/containers/home.component.html
@@ -33,7 +33,7 @@
               pRipple
               type="button"
               [label]="'Convert' | translate"
-              class="primary-button"
+              class="primary-button no-select"
               (click)="convertToMP3()"
             >
             </button>
@@ -44,7 +44,7 @@
               pRipple
               type="button"
               [label]="'Reset' | translate"
-              class="secondary-button"
+              class="secondary-button no-select"
               (click)="reset()"
             >
             </button>
@@ -77,7 +77,7 @@
           pRipple
           type="button"
           [label]="'Download' | translate"
-          class="primary-button"
+          class="primary-button no-select"
           (click)="downloadMP3()"
         >
         </button>
