--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
 .layout-container {
-  .header, .content, .footer {
+  .header, .content {
     width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
   }
 
   .content {
+    height: 100%;
     padding: 25px 10px;
   }
 }
