Handling API errors and weird things

--- a/src/app/pages/home/containers/home.component.html
+++ b/src/app/pages/home/containers/home.component.html
@@ -33,6 +33,7 @@
               pRipple
               type="button"
               [label]="'Convert' | translate"
+              icon="fa-solid fa-arrow-right-arrow-left"
               class="primary-button no-select"
               (click)="convertToMP3()"
             >
@@ -44,6 +45,7 @@
               pRipple
               type="button"
               [label]="'Reset' | translate"
+              icon="fa-solid fa-rotate"
               class="secondary-button no-select"
               (click)="reset()"
             >
@@ -77,6 +79,7 @@
           pRipple
           type="button"
           [label]="'Download' | translate"
+          icon="fa-solid fa-file-arrow-down"
           class="primary-button no-select"
           (click)="downloadMP3()"
         >
